--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                             <span class="tech-tag">WhatsApp API</span>
                         </div>
                         <div class="project-buttons">
-                            <a href="#" class="btn btn-project-primary">
+                            <a href="https://ahamad-tech.github.io/layaz-/" class="btn btn-project-primary">
                                 <i class="fas fa-globe"></i>
                                 Live Website
                             </a>
@@ -444,4 +444,5 @@
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
 
