--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             <img src="assets/images/homemade-soap.svg" alt="Homemade Soap Company Website">
                             <div class="project-overlay">
                                 <div class="project-overlay-content">
-                                    <a href="#" class="project-link-btn">
+                                    <a href="https://ahamad-tech.github.io/layaz-/" class="project-link-btn">
                                         <i class="fas fa-external-link-alt"></i>
                                         <span>Visit Site</span>
                                     </a>
@@ -339,7 +339,7 @@
                                 <i class="fas fa-globe"></i>
                                 Live Website
                             </a>
-                            <a href="#" class="btn btn-project-secondary">
+                            <a href="https://ahamad-tech.github.io/layaz-/" class="btn btn-project-secondary">
                                 <i class="fab fa-github"></i>
                                 GitHub
                             </a>
@@ -444,5 +444,6 @@
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
 
 
